[package]
name = "wavelet-core"
version = "0.1.0"
edition = "2021"
description = "Wavelet transforms: Haar, Daubechies D4, CWT basics, thresholding and denoising"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/wavelet-core"
keywords = ["wavelet", "haar", "daubechies", "denoise", "dsp"]
categories = ["science", "mathematics", "algorithms"]
authors = ["SuperInstance"]
readme = "README.md"
